istio/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
    service: demo
spec:
  ports:
    - port: 9010
      name: https-port
  selector:
    app: demo
    version: v1
