istio/demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
    service: demo
spec:
  ports:
    - port: 9010
      name: https-port
  selector:
    app: demo
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-v1
  labels:
    app: demo
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: demo
        version: v1
    spec:
      containers:
        - name: demo
          image: xdaduck/demo-https:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9010
              name: https-port
