istio/demo-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo
spec:
  host: demo
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      portLevelSettings:
        - port:
            number: 9010
          tls:
            mode: SIMPLE
