istio/demo-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
    - "demo"
  http:
    - route:
        - destination:
            host: demo
            subset: v1
            port:
              number: 9010
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo
spec:
  host: demo
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      portLevelSettings:
        - port:
            number: 9010
          tls:
            mode: SIMPLE
