istio/demo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
    - "demo"
  http:
    - route:
        - destination:
            host: demo
            subset: v1
            port:
              number: 9010
